--- a/src/force-app/main/default/classes/OrderTriggerHandler.cls
+++ b/src/force-app/main/default/classes/OrderTriggerHandler.cls
@@ -9,11 +9,25 @@ public with sharing class OrderTriggerHandler {
         return instance;
     }
 
-    public void onBeforeInsert(List<Order> newOrders) {
+    public void run(List<Order> newOrders, Map<Id, Order> oldOrders, TriggerOperation operation) {
+        switch on operation {
+            when BEFORE_INSERT {
+                OrderTriggerHandler.getInstance().onBeforeInsert(newOrders);
+            }
+            when BEFORE_UPDATE {
+                OrderTriggerHandler.getInstance().onBeforeUpdate(newOrders, oldOrders);
+            }
+            when else {
+                throw new IllegalArgumentException(Constants.EXCEPTION_UNSUPPORTED_TRIGGER_OPERATION_TYPE);
+            }
+        }
+    }
+
+    private void onBeforeInsert(List<Order> newOrders) {
         OrderService.getInstance().captureLastStatusChange(newOrders, null);
     }
 
-    public void onBeforeUpdate(List<Order> newOrders, Map<Id, Order> oldOrders) {
+    private void onBeforeUpdate(List<Order> newOrders, Map<Id, Order> oldOrders) {
         OrderService.getInstance().captureLastStatusChange(newOrders, oldOrders);
     }
 }
