UC#2 - LWC header level actions (end, ~3h).

--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -47,11 +47,11 @@ public with sharing class AccountOrdersController {
         OrderUpdateResultDTO our = new OrderUpdateResultDTO();
         try {
             validateStatusChangeRequest(orderIds);
-            OrderService.getInstance().setOrdersStatusToActived(orderIds);
-            our.status = Constants.ORDER_UPDATE_STATUS_OK;
+            Map<Id, Order> ordersById = new Map<Id, Order>(OrderSelector.getInstance().getOrdersById(new Set<Id>(orderIds)));
+            List<Database.SaveResult> saveResults = OrderService.getInstance().setOrdersStatusToActived(ordersById.values());
+            our.captureErrorsFromSaveResults(ordersById, saveResults);
         } catch (Exception e) {
-            our.status = Constants.ORDER_UPDATE_STATUS_ERROR;
-            our.errorMessage = e.getMessage();
+            our.captureException(e);
         }
         return our;
     }
@@ -66,11 +66,11 @@ public with sharing class AccountOrdersController {
         OrderUpdateResultDTO our = new OrderUpdateResultDTO();
         try {
             validateStatusChangeRequest(orderIds);
-            OrderService.getInstance().setOrdersStatusToShipped(orderIds);
-            our.status = Constants.ORDER_UPDATE_STATUS_OK;
+            Map<Id, Order> ordersById = new Map<Id, Order>(OrderSelector.getInstance().getOrdersById(new Set<Id>(orderIds)));
+            List<Database.SaveResult> saveResults = OrderService.getInstance().setOrdersStatusToShipped(ordersById.values());
+            our.captureErrorsFromSaveResults(ordersById, saveResults);
         } catch (Exception e) {
-            our.status = Constants.ORDER_UPDATE_STATUS_ERROR;
-            our.errorMessage = e.getMessage();
+            our.captureException(e);
         }
         return our;
     }
@@ -92,93 +92,5 @@ public with sharing class AccountOrdersController {
                 throw new IllegalArgumentException(Constants.EXCEPTION_ORDERID_SHOULD_CONTAIN_ONLY_VALID_ORDER_IDS);
             }
         }
-    }
-
-    /**
-     * @description OrderDTO: DTO used to pass Order details
-     * in UI-friendly format.
-     */
-    public class OrderDTO {
-        @AuraEnabled
-        public String recordId;
-        @AuraEnabled
-        public String recordURL;
-        @AuraEnabled
-        public String orderNumber;
-        @AuraEnabled
-        public Date startDate;
-        @AuraEnabled
-        public String status;
-        @AuraEnabled
-        public Datetime lastStatusChanged;
-        @AuraEnabled
-        public Decimal amount;
-        @AuraEnabled
-        public Boolean canBeActivated;
-        @AuraEnabled
-        public Boolean canBeShipped;
-        @AuraEnabled
-        public String invoicePreviewURL;
-        @AuraEnabled
-        public String invoiceDownloadURL;
-        @AuraEnabled
-        public Boolean hasInvoice;
-        @AuraEnabled
-        public Boolean showActionsMenu;
-
-        public void addOrderDetails(Order o) {
-            //Safety block to avoid NLPE.
-            if (null == o) {
-                throw new IllegalArgumentException(Constants.EXCEPTION_ORDER_CANNOT_BE_NULL);
-            }
-            this.recordId = o.Id;
-            this.recordURL = '/' + o.Id;
-            this.orderNumber = o.OrderNumber;
-            this.startDate = o.EffectiveDate;
-            this.status = o.Status;
-            this.lastStatusChanged = o.LastStatusChanged__c;
-            this.amount = o.TotalAmount;
-            this.initCanBeActivatedFlag();
-            this.initCanBeShippedFlag();
-            this.initShowActionsMenuFlag();
-        }
-
-        public void addInvoice(ContentDocumentLink cdl) {
-            //Safety block to avoid NLPE.
-            if (null == cdl) {
-                return;
-            }
-            this.hasInvoice = true;
-            this.invoicePreviewURL
-                = Constants.CONTENT_DOCUMENT_VERSION_PREVIEW_LINK_TEMPLATE
-                + cdl.ContentDocument.LatestPublishedVersionId;
-            this.invoiceDownloadURL
-                = Constants.CONTENT_DOCUMENT_VERSION_DOWNLOAD_LINK_TEMPLATE
-                + cdl.ContentDocument.LatestPublishedVersionId;
-            this.initShowActionsMenuFlag();
-        }
-
-        private void initCanBeActivatedFlag() {
-            this.canBeActivated = Constants.ORDER_STATUS_DRAFT.equalsIgnoreCase(this.Status);
-        }
-
-        private void initCanBeShippedFlag() {
-            this.canBeShipped = Constants.ORDER_STATUS_ACTIVATED.equalsIgnoreCase(this.Status);
-        }
-
-        private void initShowActionsMenuFlag() {
-            this.showActionsMenu = true == this.canBeActivated || true == this.canBeShipped || true == this.hasInvoice;
-        }
-    }
-
-    /**
-     * @description OrderUpdateResultDTO: DTO used to pass details
-     * about Order update in UI-friendly format.
-     */
-    public class OrderUpdateResultDTO {
-        @AuraEnabled
-        public String status;
-        @AuraEnabled
-        public String errorMessage;
     }
 }
